# Magic

./: .dockerignore  .editorconfig  .env  .env.example  .env.test  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LAUNCH_GUIDE.md  LICENSE  README.md  SECURITY.md  admin_bot.py  alembic.ini  bot_health_check.py  check_bot_alive.py  cleanup_chat.py  docker-compose.yml  enable_notifications.py  improvement_plan.md  migrate_add_ai_limits.py  migrate_add_ai_mode.py  migrate_add_hybrid_drafts.py  migrate_add_indexes.py  migrate_add_payment_fields.py  migrate_add_prediction_history.py  perplexity_recommendations.md  pyproject.toml  requirements-ml.txt  requirements.txt  ruff.toml  run_bots.py  send_daily_notifications.py  task_for_max.md  test_bot.py  update_notification_time.py  userbot.py
.backup_update/: .env
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
alembic/versions/: migrate_add_ai_mode.py  migrate_add_hybrid_drafts.py  migrate_add_indexes.py
bot/: __init__.py  config.py  health_server.py  logging_config.py  main.py  start.py
bot/database/: engine.py
bot/handlers/: admin.py  admin_search.py  ai_mode.py  ask.py  astrology.py  consultant.py  consultant.py.backup  consultant_start.py  dream.py  file_upload.py  finance_calendar.py  heartbeat.py  history.py  horoscope.py  meditation.py  numerology.py  orders.py  predictions.py  profile.py  random.py  runes.py  settings.py  start.py  tarot.py
bot/middlewares/: __init__.py  auth.py  throttling.py
bot/models/: __init__.py  base.py  consultation.py  consultation_file.py  hybrid_draft.py  order.py  prediction_history.py  user_profile.py  user_settings.py
bot/prompts/: affirmation.md  astrology.md  aura.md  compatibility.md  dream.md  horoscope_daily.md  iching.md  meditation.md  numerology.md  runes.md  system.md  tarot.md
bot/services/: client_files.py  daily_content.py  history.py  hybrid_draft.py  llm.py  order.py  prediction_history_service.py  prompt_manager.py  user_search_service.py  user_settings.py
data/: dream.json  numerology.json  tarot_deck.json  tarot_simple.json  zodiac.json
memory/: 2026-02-14.md
scripts/: bot_health_check.py  check_bot_alive.py  cleanup_chat.py  enable_notifications.py  send_daily_notifications.py  update_notification_time.py
tests/: conftest.py  test_health.py
