[project]
name = "mysticbot"
version = "1.0.0"
description = "Мистический Telegram бот с гаданиями и предсказаниями"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "MysticBot Team" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "aiogram>=3.15",
    "aiohttp>=3.9.0",
    "pydantic-settings>=2.7",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "redis>=5.0",
    "alembic>=1.13.0",
]

[project.optional-dependencies]
ml = [
    "opencv-python>=4.8.0",
    "easyocr>=1.7.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.30.0",
    "numpy>=1.24.0",
]
dev = [
    "pytest>=8.4",
    "pytest-asyncio>=0.25",
    "pytest-mock>=3.14",
    "ruff>=0.11",
    "mypy>=1.16",
    "pre-commit>=4.2",
]

[tool.setuptools]
packages = ["bot"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
ignore = [
    "E501",
    "F841",
    "ANN101",
    "ANN102",
]
line-length = 120
format = true
target-version = "py312"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
