[project]
name = "mysticbot"
version = "1.0.0"
description = "Мистический Telegram бот с гаданиями и предсказаниями"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "MysticBot Team" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "aiogram>=3.15",
    "aiohttp>=3.9.0",
    "pydantic-settings>=2.7",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "redis>=5.0",
    "alembic>=1.13.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "psutil>=5.9",
    "pillow>=10.0",
    "ephem>=4.1",
    "python-dateutil>=2.8",
    "pytz>=2024.1",
    "telethon>=1.36",
    "apscheduler>=3.10",
    "aiosqlite>=0.20",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
ml = [
    "opencv-python>=4.8.0",
    "easyocr>=1.7.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.30.0",
    "numpy>=1.24.0",
]
dev = [
    "pytest>=8.4",
    "pytest-asyncio>=0.25",
    "pytest-mock>=3.14",
    "ruff>=0.11",
    "mypy>=1.16",
    "pre-commit>=4.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4",
    "pytest-asyncio>=0.25",
    "pytest-mock>=3.14",
    "ruff>=0.11",
    "mypy>=1.16",
    "pre-commit>=4.2",
]

[tool.setuptools]
packages = ["bot"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
